--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "damoDealsV2",
+  "name": "damodealsv2",
   "version": "1.0.0",
+  "description": "un bot discord tah les deals",
   "main": "index.js",
-  "repository": "https://github.com/Damokless/damoDealsV2.git",
-  "author": "Damokless <damokless@protonmail.com>",
-  "license": "MIT",
+  "type": "module",
   "dependencies": {
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3"
@@ -13,5 +12,19 @@
     "eslint": "^8.28.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0"
-  }
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Damokless/damoDealsV2.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Damokless/damoDealsV2/issues"
+  },
+  "homepage": "https://github.com/Damokless/damoDealsV2#readme"
 }
