--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3",
-    "sqlite": "^4.1.2"
+    "sqlite": "^4.1.2",
+    "sqlite3": "^5.1.2"
   },
   "devDependencies": {
     "eslint": "^8.28.0",
